WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118395
[Soup] WebTiming information not shown in the inspector
https://bugs.webkit.org/show_bug.cgi?id=118395
Summary
[Soup] WebTiming information not shown in the inspector
Sergio Villar Senin
Reported
2013-07-04 10:36:43 PDT
Inspector is not showing timing information because the response does not carry the required information due to changes added in
r116160
. Patch to follow.
Attachments
Patch
(8.65 KB, patch)
2013-07-04 11:57 PDT
,
Sergio Villar Senin
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2013-07-04 11:57:46 PDT
Created
attachment 206106
[details]
Patch
Martin Robinson
Comment 2
2013-07-04 12:08:20 PDT
(In reply to
comment #0
)
> Inspector is not showing timing information because the response does not carry the required information due to changes added in
r116160
. Patch to follow.
Okay. The soup backend bits look reasonable. I don't know about the WebTiming test.
Sergio Villar Senin
Comment 3
2013-07-04 12:15:24 PDT
(In reply to
comment #2
)
> (In reply to
comment #0
) > > Inspector is not showing timing information because the response does not carry the required information due to changes added in
r116160
. Patch to follow. > > Okay. The soup backend bits look reasonable. I don't know about the WebTiming test.
BTW I've just checked that the similar fix was added to Blink.
Sergio Villar Senin
Comment 4
2013-07-18 06:22:07 PDT
(In reply to
comment #2
)
> (In reply to
comment #0
) > > Inspector is not showing timing information because the response does not carry the required information due to changes added in
r116160
. Patch to follow. > > Okay. The soup backend bits look reasonable. I don't know about the WebTiming test.
ap, andersca: any thoughts?
Sergio Villar Senin
Comment 5
2013-08-12 08:49:18 PDT
Adding Brady who might have an opinion on the matter. The fix is already pre-reviewed, just need someone to double-check that the test changes are OK.
Sergio Villar Senin
Comment 6
2013-08-27 07:49:50 PDT
Ping reviewers
Martin Robinson
Comment 7
2013-08-27 08:46:06 PDT
Comment on
attachment 206106
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=206106&action=review
> LayoutTests/http/tests/misc/webtiming-ssl-expected.txt:7 > -FAIL timing.secureConnectionStart should be >= timing.connectStart. Was 0 (of type number). > +PASS timing.secureConnectionStart is >= timing.connectStart
Okay. This looks okay to me, but won't this start failing on other ports now? If not, then do they have cascading expectations to cover this? If they do, doesn't it make sense to remove those as well?
Sergio Villar Senin
Comment 8
2013-08-27 09:02:28 PDT
(In reply to
comment #7
)
> (From update of
attachment 206106
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=206106&action=review
> > > LayoutTests/http/tests/misc/webtiming-ssl-expected.txt:7 > > -FAIL timing.secureConnectionStart should be >= timing.connectStart. Was 0 (of type number). > > +PASS timing.secureConnectionStart is >= timing.connectStart > > Okay. This looks okay to me, but won't this start failing on other ports now? If not, then do they have cascading expectations to cover this? If they do, doesn't it make sense to remove those as well?
Mac, Win and Wincairo ports explicitly disable this test, efl/gtk will share this fix, so the only one remaining is Qt which does not support WEB_TIMING AFAIK...
Martin Robinson
Comment 9
2013-08-27 09:03:16 PDT
Comment on
attachment 206106
[details]
Patch Thanks. This has been sitting long enough.
Sergio Villar Senin
Comment 10
2013-08-28 02:28:59 PDT
Committed
r154727
: <
http://trac.webkit.org/changeset/154727
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug